fix(tenantadmin): resolve null IDs and exceptions in settings and i18n services
Corrects `TenantAdminSettingsService.search()` to return rows with non-null IDs by using `settingsAdmin.search()` instead of `settingsCatalog.resolve()`. Also fixes `UnsupportedOperationException` in `TenantAdminI18nService.search()` and `resolvePreview()` by leveraging `I18nOverridesCatalog`.