@@ -1,45 +1,44 @@
 package com.tchalanet.server.features.tenantadmin.config.settings;
 
-import com.tchalanet.server.catalog.settings.api.SettingsCatalog;
-import com.tchalanet.server.catalog.settings.api.model.ResolveSettingsCriteria;
 import com.tchalanet.server.catalog.settings.api.model.SettingValueType;
 import com.tchalanet.server.catalog.settings.api.model.SettingLevel;
+import com.tchalanet.server.catalog.settings.internal.web.model.SearchSettingsCriteria;
 import com.tchalanet.server.catalog.settings.internal.write.SettingsAdminService;
 import com.tchalanet.server.common.context.TchRequestContext;
+import com.tchalanet.server.common.web.paging.TchPageRequest;
+import com.tchalanet.server.features.tenantadmin.config.settings.model.UpsertTenantSettingResult;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class TenantAdminSettingsService {
 
-  private final SettingsCatalog settingsCatalog;
   private final SettingsAdminService settingsAdmin;
 
-  public List<com.tchalanet.server.features.tenantadmin.config.settings.model.AdminSettingRow> search(TchRequestContext ctx, String namespace, String settingKey, Boolean active) {
-    var criteria = new ResolveSettingsCriteria(ctx.tenantIdSafe(), null, null, List.of(namespace == null ? "" : namespace));
-    var resolved = settingsCatalog.resolve(criteria);
-    return resolved.stream().map(r -> new com.tchalanet.server.features.tenantadmin.config.settings.model.AdminSettingRow(
-        null, // Resolved view doesn't have ID
-        r.namespace(),
-        r.settingKey(),
-        r.valueType().name(),
-        r.settingValue(),
-        r.effectiveLevel().name(),
-        true // Assume active if resolved
-    )).collect(Collectors.toList());
+  public List<com.tchalanet.server.features.tenantadmin.config.settings.model.AdminSettingRow> search(TchRequestContext ctx, String namespace, String settingKey, Boolean active, TchPageRequest pageRequest) {
+    var criteria = new SearchSettingsCriteria(namespace, settingKey, SettingLevel.TENANT, ctx.tenantIdSafe(), active);
+    var page = settingsAdmin.search(criteria, pageRequest);
+    return page.items().stream().map(setting -> new com.tchalanet.server.features.tenantadmin.config.settings.model.AdminSettingRow(
+        setting.id().value().toString(),
+        setting.namespace(),
+        setting.settingKey(),
+        setting.valueType().name(),
+        setting.settingValue(),
+        setting.level().name(),
+        setting.active()
+    )).toList();
   }
 
-  public com.tchalanet.server.features.tenantadmin.config.settings.model.UpsertTenantSettingResult upsert(TchRequestContext ctx, com.tchalanet.server.features.tenantadmin.config.settings.model.UpsertTenantSettingRequest req) {
+  public UpsertTenantSettingResult upsert(TchRequestContext ctx, com.tchalanet.server.features.tenantadmin.config.settings.model.UpsertTenantSettingRequest req) {
     var tenantId = ctx.tenantIdSafe();
     var created = settingsAdmin.create(new com.tchalanet.server.catalog.settings.internal.web.model.CreateSettingRequest(
         req.namespace(), req.settingKey(), req.settingValue(), SettingValueType.STRING, SettingLevel.TENANT, tenantId, null, null
     ));
 
-    return new com.tchalanet.server.features.tenantadmin.config.settings.model.UpsertTenantSettingResult(created.id() == null ? null : created.id().value().toString());
+    return new UpsertTenantSettingResult(created.id() == null ? null : created.id().value().toString());
   }
 
   public void delete(TchRequestContext ctx, com.tchalanet.server.common.types.id.SettingId id) {
